# DREAM_repo

./: BodeClass.py  BodeClass_JTS.py  BodeClass_PSI.py  DREAM_colors.py  EkClass_JTS.py  EkClass_PSI.py  ExperimentClass.py  Marcelo_PhD_env.yml  README.md  RLC_model.ipynb  TurbidostatClass.py  VitessePhotochimiquePWMClass.py  arduino_ESP_sinus.py  arduino_sinus.py  bode_tools.py  data.csv  environment.yml  math_functions.py  read_ESP.py  read_ESP_simple.py  seg_func.py  simu_ECS.ipynb  tools.py
Arduino_codes/: read_ESP.py  read_ESP_simple.py
Codes_Alienor/PAMFluo-dynamic_python/test/: CMakeLists.txt  python_serial.py
MCC_DAQ/: MPPC_Recording.ipynb  MPPC_Recording_new.ipynb  MPPC_Recording_trig.ipynb
Notebooks/: Bode_PSI_steady_state.ipynb  DREAM_Colors.ipynb  DREAM_microscope.ipynb  DREAM_microscope_MPPC.ipynb  DREAM_microscope_fluoresceine.ipynb  DREAM_microscope_low_int_dye.ipynb  DREAM_microscope_oscillations.ipynb  Ek.ipynb  Ek_v2.ipynb  FFT_playground.ipynb  Fluo_liq_light_calib.ipynb  JTS_light_calib.ipynb  MCC_DAQ.ipynb  NPQ_fluo_liquide_phaeo.ipynb  NPQ_speedzen.ipynb  NPQ_speedzen_Bode_PSI.ipynb  NPQ_speedzen_Bode_PSI_compare.ipynb  NPQ_speedzen_Bode_PSI_stt7.ipynb  NPQ_speedzen_lincomycin.ipynb  NPQ_speedzen_lincomycin_long.ipynb  NPQ_speedzen_penicilin.ipynb  Oscillo.ipynb  PSI.ipynb  PSI_DTT.ipynb  PSI_DTT_compare.ipynb  PSI_DTT_compare_20241121.ipynb  PSI_Ek_OJIP.ipynb  PSI_Ek_compare.ipynb  PSI_Ek_court.ipynb  PSI_Ek_long.ipynb  PSI_Ek_long_bode_20240917.ipynb  PSI_Ek_long_chlamy_20241203.ipynb  PSI_Ek_long_phaeo_20241014.ipynb  PSI_Ek_long_phiPS2.ipynb  PSI_Ek_long_phiPS2_phaeo_compare.ipynb  PSI_Ek_long_phiPS2_phaeo_compare_bicarbonate_day.ipynb  PSI_Ek_long_phiPS2_stt7.ipynb  PSI_Ek_long_phiPS2_stt7_compare.ipynb  PSI_activation_chlamy_visualization.ipynb  PSI_activation_phaeo_compare.ipynb  (+51 more)
PAMFluo-dynamic_python/: AL_Calibration.py  Heterodyne.py  IBPC_pulse.py  Intensity_calibration_video.py  NPQ_2_levels.ipynb  OJIP_video.ipynb  OscillationProtocol.py  Segmentation.py  SpectralContent.py  TriangleIntensity.py  VoltageIntensityClass.py  apply_constant_light.py  dark_relaxation.py  image_segmentation_algae.ipynb  qE_long_activation_loop.py  qE_loop_november.py
test/: test.ino
(+268 files in other folders)
